force-app/main/default/objects/Support__c/Support__c.object-meta.xml
<CustomObject>
    <label>Support</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Support Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>