force-app/main/default/objects/Support__c/fields/Chargeable_Value__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Value__c</fullName>
    <formula>IF(
  AND(
    ISPICKVAL(Cotation__r.Type_de_service__c, &quot;Fret Maritime&quot;),
    ISPICKVAL(Cotation__r.Type_d_exp_dition__c, &quot;Groupage&quot;)
  ),
  ( Longueur__c * Largeur__c * Hauteur__c ) / 1000000,
  IF(
    OR(
       AND(
      ISPICKVAL(Cotation__r.Type_de_service__c, &quot;Fret Routier&quot;),
      ISPICKVAL(Cotation__r.Type_d_exp_dition__c, &quot;Groupage gerbable&quot;)
      ),
ISPICKVAL(Cotation__r.Type_de_service__c, &quot;Fret Aérien&quot;)),
    Longueur__c * Largeur__c * Hauteur__c * Cotation__r.TECH_Cnsnt_de_calcul_Chargeable_value__c / 1000000,
    0
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chargeable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>