force-app/main/default/objects/Support__c/fields/Cotation__c.field-meta.xml
<CustomField>
    <fullName>Cotation__c</fullName>
    <label>Cotation</label>
    <referenceTo>Cotation__c</referenceTo>
    <relationshipLabel>Supports</relationshipLabel>
    <relationshipName>Supports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>