force-app/main/default/objects/Support__c/fields/Dimension__c.field-meta.xml
<CustomField>
    <fullName>Dimension__c</fullName>
    <label>Dimension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20&apos; General Purpose</fullName>
            </value>
            <value>
                <fullName>40&apos; General Purpose</fullName>
            </value>
            <value>
                <fullName>40&apos; General Purpose High Cube</fullName>
            </value>
            <value>
                <fullName>20&apos; Operating Reefer</fullName>
            </value>
            <value>
                <fullName>40&apos; Operating Reefer</fullName>
            </value>
            <value>
                <fullName>40&apos; Non-operating Reefer</fullName>
            </value>
            <value>
                <fullName>20&apos; Open Top (in-gauge)</fullName>
            </value>
            <value>
                <fullName>40&apos; Open Top (in-gauge)</fullName>
            </value>
            <value>
                <fullName>20&apos; Flatrack (in-gauge)</fullName>
            </value>
            <value>
                <fullName>40&apos; Flatrack (in-gauge)</fullName>
            </value>
            <value>
                <fullName>40&apos; High Cube Flatrack (in-gauge)</fullName>
            </value>
            <value>
                <fullName>20&apos; High Cube Open Top (in-gauge)</fullName>
            </value>
            <value>
                <fullName>40&apos; High Cube Open Top (in-gauge)</fullName>
            </value>
            <value>
                <fullName>40&apos; High Cube Hard Top (in-gauge)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>