force-app/main/default/objects/Support__c/fields/Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight__c</fullName>
    <label>Gross Weight (kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>