force-app/main/default/objects/Support__c/fields/GW_Constante__c.field-meta.xml
<CustomField>
    <fullName>GW_Constante__c</fullName>
    <formula>IF(
  AND(
    ISPICKVAL(Cotation__r.Type_de_service__c, &quot;Fret Maritime&quot;),
    ISPICKVAL(Cotation__r.Type_d_exp_dition__c, &quot;Groupage&quot;)
  ),
  Gross_Weight__c / Cotation__r.TECH_Cnsnt_de_calcul_Chargeable_value__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GW / Constante</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>