force-app/main/default/objects/Support__c/fields/Hauteur__c.field-meta.xml
<CustomField>
    <fullName>Hauteur__c</fullName>
    <label>Hauteur (cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>