force-app/main/default/objects/Support__c/fields/Largeur__c.field-meta.xml
<CustomField>
    <fullName>Largeur__c</fullName>
    <label>Largeur (cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>