force-app/main/default/objects/Support__c/fields/Longueur__c.field-meta.xml
<CustomField>
    <fullName>Longueur__c</fullName>
    <label>Longueur (cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>