force-app/main/default/objects/Support__c/fields/N_de_palette__c.field-meta.xml
<CustomField>
    <fullName>N_de_palette__c</fullName>
    <formula>TEXT(Largeur__c) &amp; &quot;-&quot; &amp; TEXT(Longueur__c) &amp; &quot;-&quot; &amp; TEXT(Hauteur__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° de palette</label>
    <type>Text</type>
</CustomField>