force-app/main/default/objects/Support__c/fields/Type_de_support__c.field-meta.xml
<CustomField>
    <fullName>Type_de_support__c</fullName>
    <label>Type de support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Palette</fullName>
            </value>
            <value>
                <fullName>Conteneur</fullName>
            </value>
            <value>
                <fullName>Remorque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>